--- a/src/components/navBar/navBar.module.css
+++ b/src/components/navBar/navBar.module.css
@@ -16,7 +16,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--purple-200)
+    background-color: var(--purple-200);
+    cursor: pointer;
 }
 
 .input{
