--- a/src/components/navBar/navBar.module.css
+++ b/src/components/navBar/navBar.module.css
@@ -33,3 +33,9 @@
     color: var(--gray-400);
     font-size: 0.75rem;
   }
+
+  @media(max-width: 415px){
+    .container {
+        padding: 40px;
+    }
+  }
