--- a/src/screen/checkout/Checkout.module.css
+++ b/src/screen/checkout/Checkout.module.css
@@ -13,3 +13,15 @@
     gap: 24px;
 }
 
+@media(max-width: 415px){
+    .container {
+        padding: 40px;
+    }
+
+    .boxesContainer {
+        flex-direction: column;
+    }
+}
+
+
+
