--- a/src/screen/checkout/components/coffeSelected/ProductItem/ProductItem.module.css
+++ b/src/screen/checkout/components/coffeSelected/ProductItem/ProductItem.module.css
@@ -23,6 +23,15 @@
 
 }
 
-.description {
+.description {}
 
+
+@media(max-width: 415px){
+    .controller button {
+        font-size: 0.6rem;
+    }
+
+    .controller button > svg {
+        display: none
+    }
 }
