--- a/src/screen/signUp/components/BoxContent/BoxContent.module.css
+++ b/src/screen/signUp/components/BoxContent/BoxContent.module.css
@@ -7,3 +7,10 @@
     font-size: 1.25rem;
     font-weight: 400;
 }
+
+@media(max-width: 415px){
+    .boxContent{
+       width: 100%;
+       padding: 60px;
+    }
+}
