--- a/src/screen/home/Home.module.css
+++ b/src/screen/home/Home.module.css
@@ -1,4 +1,11 @@
 .container {  
-    width: 100%;
+        width: 100vw;
+        height: 100vh;
     padding: 60px 120px;
+}
+
+@media(max-width: 415px){
+    .container{
+        padding: 40px;
+    }
 }
