--- a/src/screen/home/components/BoxHome/boxHome.module.css
+++ b/src/screen/home/components/BoxHome/boxHome.module.css
@@ -32,3 +32,22 @@
     background-color: var(--yellow-400);
     padding: 0 6px;
 }
+
+@media(max-width: 415px){
+    .container{
+        padding: 40px;
+        height: 100px;
+    }
+
+    .container h1{
+        font-size: 1.125rem;
+    }
+
+    .container p{
+        font-size: 0.75rem;
+    }
+    .imageContainer {
+        display: none;
+    }
+
+}
