--- a/src/screen/home/components/Filters/Filter.module.css
+++ b/src/screen/home/components/Filters/Filter.module.css
@@ -1,6 +1,5 @@
 .container {
     width: 100%;
-    height: 100%;
     padding: 24px;
     border-radius: 18px;
     background-color: var(--gray-300);
@@ -12,4 +11,10 @@
 .container p{
     font-size: 1rem;
     color: var(--white);
+}
+
+@media(max-width: 415px) {
+    .container {
+        flex-direction: column;
+    }
 }
