--- a/src/screen/signUp/components/FormSignUp/FormSignup.module.css
+++ b/src/screen/signUp/components/FormSignUp/FormSignup.module.css
@@ -1,4 +1,3 @@
-
 .container{
     display: flex;
     flex-direction: column;
@@ -92,4 +91,12 @@
      cursor: pointer;
  }
  
+
+@media(max-width: 415px){
+    
+    .container fieldset{
+        padding: 12px 0;
+    }
+    
+}
  
