--- a/src/components/navBar/navBar.module.css
+++ b/src/components/navBar/navBar.module.css
@@ -15,7 +15,10 @@
 
 .shopping {
     height: 40px;
-    width: 40px;
+    padding: 12px;
+    font-size: 0.75rem;
+    gap: 4px;
+    color: var(--white);
     border-radius: 12px;
     display: flex;
     align-items: center;
