--- a/src/screen/checkout/components/coffeSelected/ProductItem/ProductItem.module.css
+++ b/src/screen/checkout/components/coffeSelected/ProductItem/ProductItem.module.css
@@ -11,7 +11,7 @@
     display: flex;
     gap: 4px;
     align-items: center;
-    padding: 4px;
+    padding: 12px;
     border-radius: 12px;
     border: none;
     outline: none;
@@ -23,7 +23,11 @@
 
 }
 
-.description {}
+.description {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+}
 
 
 @media(max-width: 415px){
