--- a/src/screen/checkout/components/coffeSelected/CoffeeSelected.module.css
+++ b/src/screen/checkout/components/coffeSelected/CoffeeSelected.module.css
@@ -4,7 +4,10 @@
     background-color: var(--gray-50);
     padding: 24px;
     border-radius: 12px;
-    
+}
+
+.total{
+    margin-top: 24px;   
 }
 
 .divider {
