feat: logout and cookies messages

--- a/src/components/navBar/navBar.module.css
+++ b/src/components/navBar/navBar.module.css
@@ -16,6 +16,7 @@
 .shopping {
     height: 40px;
     padding: 12px;
+    margin-right: 24px;
     font-size: 0.75rem;
     gap: 4px;
     color: var(--white);
@@ -39,6 +40,22 @@
 .input::placeholder {
     color: var(--gray-400);
     font-size: 0.75rem;
+  }
+
+.profile {
+    display: flex;
+    gap: 4px;
+}
+
+  .profilePhoto {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: var(--white);
+    border: 2px double var(--purple-300)
   }
 
   @media(max-width: 415px){
