feat: dropdown cart

--- a/src/screen/home/components/CardList/CardList.module.css
+++ b/src/screen/home/components/CardList/CardList.module.css
@@ -33,7 +33,7 @@
   }
 
   @media(max-width: 415px){
-    .search{
-        width: 100%;
-    }
+    .search{ width: 100%; }
+    /* .container { flex-direction: row} */
+    .content {  overflow-y: auto; flex-wrap: nowrap; }
   }
